fix: some jumping around issues with the a tag hover

--- a/src/components/blog/post-preview.css
+++ b/src/components/blog/post-preview.css
@@ -1,6 +1,6 @@
 .post-preview {
   margin: 1rem 0;
-  width: 100%
+  width: 100%;
 }
 
 .read-this {
